amplified/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 7
  selector:
    matchLabels:
      app: hello
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      containers:
      -  name: hello
         image: "gcr.io/google-samples/hello-go-gke:1.0"
         ports:
            - name: http
              containerPort: 80
